--- a/.gitattributes
+++ b/.gitattributes
@@ -1,5 +1,6 @@
 ###############################################################################
-# Settings compiled by @ciel https://www.github.com/ciel
+# Original settings compiled by @ciel https://www.github.com/ciel
+# Modified for use with yarn by @LilyBell https://www.github.com/LilyBell
 ###############################################################################
 
 ###############################################################################
