--- a/.sass-lint.yml
+++ b/.sass-lint.yml
@@ -1,4 +1,5 @@
-# Settings complied by @ciel http://www.github.com/ciel
+# Original settings complied by @ciel https://www.github.com/ciel
+# Modified for use with yarn by @Lilybell https://www.github.com/LilyBell
 
 files:
     include: '**/*.scss'
