--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-# Settings complied by @ciel http://www.github.com/ciel
+# Original settings complied by @ciel https://www.github.com/ciel
+# Modified for use with yarn by @LilyBell https://www.github.com/LilyBell
 
 {
   "name": "@LilyBell/angular_dotnet_startup",
